0.59.1.0/_sources/Reference/NodeReference/GafferScene/Seeds.md.txt
Seeds
=====

Scatters points evenly over the surface of meshes.
This can be particularly useful in conjunction with
the Instancer, which can then apply instances to
each point.

user
----

Container for user-defined plugs. Nodes
should never make their own plugs here,
so users are free to do as they wish.

out
---

The processed output scene.

enabled
-------

The on/off state of the node. When it is off, the node outputs the input scene unchanged.

in
--

The input scene

filter
------

The filter used to control which parts of the scene are
processed. A Filter node should be connected here.

parent
------

The location of the mesh to scatter the
points over. The generated points will
be parented under this location. This is
ignored when a filter is connected, in
which case the filter may specify multiple
locations containing meshes to scatter points
over.

name
----

The name given to the object generated -
this will be placed under the parent in
the scene hierarchy.

density
-------

The number of points per unit area of the mesh,
measured in object space.

densityPrimitiveVariable
------------------------

A float primitive variable used to specify a varying
point density across the surface of the mesh. Multiplied
with the density setting above.

pointType
---------

The render type of the points. This defaults to
"gl:point" so that the points are rendered in a
lightweight manner in the viewport.